--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="animate-title">Bienvenido a Mi Radio Online</h1>
+        <h1 class="animate-title">Radio Online</h1>
         <p class="animate-subtitle">Disfruta de la mejor música en vivo</p>
     </header>
 
