--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="radio-section animate-fade-in">
             <h2>Escucha en Vivo</h2>
             <div class="radio-player">
-                <iframe src="https://radiopy.duckdns.org/public/radiotv/embed?theme=dark" 
+                <iframe src="https://capiata-news.duckdns.org/public/radiotv/embed?theme=dark" 
                         frameborder="0" 
                         allowtransparency="true" 
                         style="width: 100%; min-height: 150px; border: 0;">
