--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -42,27 +43,6 @@
                 <a href="https://wa.me/+595993539237" class="cta-button">
                     <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
                 </a>
-            </div>
-        </section>
-
-        <!-- Nueva sección de Publicidad -->
-        <section class="advertising-section animate-fade-in">
-            <h2>Publicita con Nosotros</h2>
-            <div class="ad-card">
-                <i class="fas fa-ad"></i>
-                <h3>Promociona tu Negocio</h3>
-                <p>Llega a nuestra audiencia activa y aumenta la visibilidad de tu negocio</p>
-                <div class="ad-options">
-                    <div class="ad-option">
-                        <h4>Menciones en Vivo</h4>
-                        <p>Tu mensaje transmitido por nuestros locutores</p>
-                    </div>
-                    <div class="ad-option">
-                        <h4>Spots Publicitarios</h4>
-                        <p>Anuncios producidos profesionalmente</p>
-                    </div>
-                </div>
-                <a href="#contactForm" class="cta-button">Solicitar Información</a>
             </div>
         </section>
 
