--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
                         style="width: 100%; min-height: 150px; border: 0;">
                 </iframe>
             </div>
+            <!-- Widget del Clima -->
+            <div class="weather-widget animate-fade-in">
+                <div id="weather-container">
+                    <div class="weather-info">
+                        <i id="weather-icon" class="fas"></i>
+                        <div class="weather-details">
+                            <h3 id="city">Asunción, Paraguay</h3>
+                            <p id="temperature">Cargando...</p>
+                            <p id="description">Cargando...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Nueva sección de Servicios -->
