--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
 
         <!-- Nueva sección de Servicios -->
         <section class="services-section animate-fade-in">
+            <i class="fas fa-tower-broadcast service-icon"></i>
             <h2>¿Quieres tu Propia Radio Online?</h2>
-            <div class="service-card">
-                <i class="fas fa-broadcast-tower"></i>
                 <h3>Creamos tu Radio Online Profesional</h3>
                 <p>Obtén tu propia radio online con las mismas características y calidad. Incluye:</p>
                 <ul>
@@ -55,6 +54,40 @@
                 </ul>
                 <a href="https://wa.me/+595993539237" class="cta-button">
                     <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
+                </a>
+            </div>
+        </section>
+
+        <!-- Sección de Publicidad -->
+        <section class="advertising-section animate-fade-in">
+            <h2>Publicidad en Nuestra Radio</h2>
+            <div class="advertising-card">
+                <i class="fas fa-bullhorn"></i>
+                <h3>Promociona tu Negocio</h3>
+                <p>Llega a miles de oyentes con tu mensaje publicitario</p>
+                <div class="ad-packages">
+                    <div class="package">
+                        <h4>Plan Básico</h4>
+                        <div class="price">Gs. 100.000</div>
+                        <ul>
+                            <li>2 menciones diarias</li>
+                            <li>Banner en sitio web</li>
+                            <li>Duración: 1 mes</li>
+                        </ul>
+                    </div>
+                    <div class="package featured">
+                        <h4>Plan Premium</h4>
+                        <div class="price">Gs. 200.000</div>
+                        <ul>
+                            <li>5 menciones diarias</li>
+                            <li>Banner destacado</li>
+                            <li>Publicación en redes sociales</li>
+                            <li>Duración: 1 mes</li>
+                        </ul>
+                    </div>
+                </div>
+                <a href="https://wa.me/+595993539237?text=Hola,%20me%20interesa%20publicitar%20en%20su%20radio" class="cta-button">
+                    <i class="fab fa-whatsapp"></i> Consultar Precios
                 </a>
             </div>
         </section>
