--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="animate-title">Radio Online</h1>
-        <p class="animate-subtitle">Disfruta de la mejor música en vivo</p>
+        <div class="header-content">
+            <div class="header-icons">
+                <i class="fas fa-broadcast-tower animate-pulse"></i>
+                <i class="fas fa-music"></i>
+            </div>
+            <h1 class="animate-title">Radio Online</h1>
+            <p class="animate-subtitle">
+                <i class="fas fa-circle live-indicator"></i>
+                Disfruta de la mejor música en vivo
+            </p>
+        </div>
     </header>
 
     <main class="container">
