--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <i class="fas fa-music"></i>
             </div>
             <h1 class="animate-title">Radio Online</h1>
+            <h2 class="animate-subtitle glow-text">JAKA FM</h2>
             <p class="animate-subtitle">
                 <i class="fas fa-circle live-indicator"></i>
                 Disfruta de la mejor música en vivo
