--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <div class="logo">MiPortalNoticias</div>
             <nav>
                 <ul>
-                    <li><a href="#" class="active">Inicio</a></li>
-                    <li><a href="#">Política</a></li>
-                    <li><a href="#">Economía</a></li>
-                    <li><a href="#">Deportes</a></li>
-                    <li><a href="#">Tecnología</a></li>
-                    <li><a href="#">Cultura</a></li>
+                    <li><a href="#" class="category-tab active" data-category="Todas">Inicio</a></li>
+                    <li><a href="#" class="category-tab" data-category="Política">Política</a></li>
+                    <li><a href="#" class="category-tab" data-category="Economía">Economía</a></li>
+                    <li><a href="#" class="category-tab" data-category="Deportes">Deportes</a></li>
+                    <li><a href="#" class="category-tab" data-category="Tecnología">Tecnología</a></li>
+                    <li><a href="#" class="category-tab" data-category="Cultura">Cultura</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,15 +32,6 @@
     </section>
 
     <main>
-        <div class="category-tabs">
-            <button class="category-tab active">Todas</button>
-            <button class="category-tab">Política</button>
-            <button class="category-tab">Economía</button>
-            <button class="category-tab">Deportes</button>
-            <button class="category-tab">Tecnología</button>
-            <button class="category-tab">Cultura</button>
-        </div>
-
         <section>
             <h2 class="section-title">Últimas Noticias</h2>
             <div class="news-grid" id="news-container">
